Update the Database Url with password
from local to ElephantSql

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,12 +1,13 @@
-spring.datasource.url=jdbc:postgresql://localhost:5432/postgres
-spring.datasource.username=postgres
-spring.datasource.driver-class-name=org.postgresql.Driver
+spring.datasource.url=jdbc:postgresql://bubble.db.elephantsql.com:5432/hwnyktvi
+spring.datasource.username=hwnyktvi
+spring.datasource.password=jEAYkhtJVgaZfNz5T8xb60gpoCh1ONed
+spring.jpa.hibernate.ddl-auto=update
+
 
 spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.PostgreSQLDialect
 spring.data.rest.base-path=/api
-
+spring.datasource.driver-class-name=org.postgresql.Driver
 # This will create table automatically in your database
-spring.jpa.hibernate.ddl-auto=none
 
 
 
